client/src/pages/App/App.module.css
.app {
  display: flex;
  height: 100vh;
  width: 100vw;
}

.sidebar {
  display: flex;
  flex-direction: column;
  flex: 0 0 300px;
  --sidebar-horizontal-padding: 20px;
  border-right: 1px solid lightgray;
  z-index: 1;
}

.contact-list {
  flex: 1;
}

.router-outlet-wrapper {
  flex: 1;
  background-size: 600px;
  background-color: #e9eef2;
}

.add-contact-btn {
  align-self: flex-start;
  margin-left: var(--sidebar-horizontal-padding);
  background: white;
  border: none;
  color: rgb(46, 136, 165);
  font-weight: bold;
  cursor: pointer;
}

.add-contact-btn:hover {
  color: rgb(102, 201, 235);
}

